ENH: Implement LableMetaList function. This commit requires OpenIGTLink library commit 661d4bd.

--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -31,9 +31,11 @@ if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
   list(APPEND module_mrml_SRCS
     vtkMRMLIGTLQueryNode.cxx
     vtkMRMLImageMetaListNode.cxx
+    vtkMRMLLabelMetaListNode.cxx
     vtkMRMLPointMetaListNode.cxx
     vtkIGTLToMRMLPointMetaList.cxx
     vtkIGTLToMRMLImageMetaList.cxx
+    vtkIGTLToMRMLLabelMetaList.cxx
     vtkIGTLToMRMLTrackingData.cxx
     vtkMRMLIGTLTrackingDataQueryNode.cxx
     vtkMRMLIGTLTrackingDataBundleNode.cxx
