ENH: Add new message converters in response to feature request #3548.

--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -24,7 +24,9 @@ set(module_mrml_SRCS
   vtkIGTLToMRMLImage.cxx
   vtkIGTLToMRMLLinearTransform.cxx
   vtkIGTLToMRMLPosition.cxx
+  vtkIGTLToMRMLStatus.cxx
   vtkMRMLIGTLConnectorNode.cxx
+  vtkMRMLIGTLStatusNode.cxx
   )
 
 if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
@@ -37,8 +39,12 @@ if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
     vtkIGTLToMRMLImageMetaList.cxx
     vtkIGTLToMRMLLabelMetaList.cxx
     vtkIGTLToMRMLTrackingData.cxx
+    vtkIGTLToMRMLSensor.cxx
+    vtkIGTLToMRMLString.cxx
+    vtkIGTLToMRMLTrajectory.cxx
     vtkMRMLIGTLTrackingDataQueryNode.cxx
     vtkMRMLIGTLTrackingDataBundleNode.cxx
+    vtkMRMLIGTLSensorNode.cxx
     )
 endif()
 
@@ -47,6 +53,7 @@ set(module_mrml_target_libraries
   ${OpenIGTLink_LIBRARIES}
   ${MRML_LIBRARIES}
   SlicerBaseLogic
+  vtkSlicerAnnotationsModuleMRML
   )
 
 SlicerMacroBuildModuleMRML(
