ENH: Use MarkupsFiducial node for POINT messages

--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -54,6 +54,7 @@ set(module_mrml_target_libraries
   ${MRML_LIBRARIES}
   SlicerBaseLogic
   vtkSlicerAnnotationsModuleMRML
+  vtkSlicerMarkupsModuleMRML
   )
 
 SlicerMacroBuildModuleMRML(
