ENH: Enhancements for better OpenIGTLink string command support
* Use simple vtkMRMLTextNode instead of vtkMRMLAnnotationTextNode
* Implemented query timeout (timeout was already in the query node but it was not used): state of the query changes to TIMEOUT if allowed time is expired
* Implemented STRING query for commands: if a STRING query node contains CommandDeviceName and CommandString attributes then a STRING message is sent out with this content as a query
* Allow the query node to have any name: IGTLDeviceName attribute is used instead of the node Name for matching with incoming nodes (NoNameQuery is not needed anymore, IGTLDeviceName can be set to empty instead)
* Use node references in vtkMRMLIGTLQueryNode instead of storing node IDs

--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -34,6 +34,7 @@ if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
     vtkMRMLIGTLQueryNode.cxx
     vtkMRMLImageMetaListNode.cxx
     vtkMRMLLabelMetaListNode.cxx
+    vtkMRMLTextNode.cxx
     vtkIGTLToMRMLPoints.cxx
     vtkIGTLToMRMLPolyData.cxx
     vtkIGTLToMRMLImageMetaList.cxx
