--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -1,24 +1,16 @@
 project(vtkSlicer${MODULE_NAME}ModuleMRML)
 
-#
-# See CMake/SlicerMacroBuildModuleLogic.cmake for details
-#
+set(KIT "${PROJECT_NAME}")
 
+set(${KIT}_EXPORT_DIRECTIVE "VTK_SLICER_OPENIGTLINKIF_MODULE_MRML_EXPORT")
 
-set(module_mrml_name "${PROJECT_NAME}")
-
-# The header '${PROJECT_NAME}Export.h' will be automatically configured.
-set(module_mrml_export_directive "VTK_SLICER_OPENIGTLINKIF_MODULE_MRML_EXPORT")
-
-# Additional directories to include
-set(module_mrml_include_directories
+set(${KIT}_INCLUDE_DIRECTORIES
   ${Slicer_Base_INCLUDE_DIRS}
   ${CMAKE_CURRENT_SOURCE_DIR}/../Logic
   ${CMAKE_CURRENT_BINARY_DIR}/../Logic
   )
 
-# Source files
-set(module_mrml_SRCS
+set(${KIT}_SRCS
   vtkIGTLCircularBuffer.cxx
   vtkIGTLToMRMLBase.cxx
   vtkIGTLToMRMLImage.cxx
@@ -30,7 +22,7 @@ set(module_mrml_SRCS
   )
 
 if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
-  list(APPEND module_mrml_SRCS
+  list(APPEND ${KIT}_SRCS
     vtkMRMLIGTLQueryNode.cxx
     vtkMRMLImageMetaListNode.cxx
     vtkMRMLLabelMetaListNode.cxx
@@ -49,8 +41,7 @@ if(OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
     )
 endif()
 
-# Additional Target libraries
-set(module_mrml_target_libraries
+set(${KIT}_TARGET_LIBRARIES
   ${OpenIGTLink_LIBRARIES}
   ${MRML_LIBRARIES}
   SlicerBaseLogic
@@ -58,10 +49,11 @@ set(module_mrml_target_libraries
   vtkSlicerMarkupsModuleMRML
   )
 
+#-----------------------------------------------------------------------------
 SlicerMacroBuildModuleMRML(
-  NAME ${module_mrml_name}
-  EXPORT_DIRECTIVE ${module_mrml_export_directive}
-  INCLUDE_DIRECTORIES ${module_mrml_include_directories}
-  SRCS ${module_mrml_SRCS}
-  TARGET_LIBRARIES ${module_mrml_target_libraries}
+  NAME ${KIT}
+  EXPORT_DIRECTIVE ${${KIT}_EXPORT_DIRECTIVE}
+  INCLUDE_DIRECTORIES ${${KIT}_INCLUDE_DIRECTORIES}
+  SRCS ${${KIT}_SRCS}
+  TARGET_LIBRARIES ${${KIT}_TARGET_LIBRARIES}
   )
