--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 
+if(POLICY CMP0048)
+  cmake_policy(SET CMP0048 NEW) # CMake 3.0.0
+endif()
+
 set(MODULE_NAME "OpenIGTLinkIF")
 set(MODULE_TITLE "OpenIGTLink I/F")
 
