changed names of igtlCodecImage to igtl::ImageConverter according to discussion in https://github.com/IGSIO/OpenIGTLinkIF/pull/1

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -11,7 +11,7 @@ set(${KIT}_INCLUDE_DIRECTORIES
   )
 
 set(${KIT}_SRCS
-  igtlCodecImage.cxx
+  igtlImageConverter.cxx
   )
 
 set(${KIT}_TARGET_LIBRARIES
