cleanup of Converter code, removed Codec name remnants.

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -1,13 +1,19 @@
-project(igtlSupportModuleCodec)
+project(igtlSupportModuleConverter)
 
 set(KIT "${PROJECT_NAME}")
 
-set(${KIT}_EXPORT_DIRECTIVE "OPENIGTLINK_SUPPORT_MODULE_CODEC_EXPORT")
+set(${KIT}_EXPORT_DIRECTIVE "OPENIGTLINK_SUPPORT_MODULE_CONVERTER_EXPORT")
+
+
+find_package(VTK 6.1
+  COMPONENTS
+  vtkIOImage
+  vtkImagingMath
+  REQUIRED
+  NO_MODULE)
+include(${VTK_USE_FILE})
 
 set(${KIT}_INCLUDE_DIRECTORIES
-#  ${Slicer_Base_INCLUDE_DIRS}
-#  ${CMAKE_CURRENT_SOURCE_DIR}/../Logic
-#  ${CMAKE_CURRENT_BINARY_DIR}/../Logic
   )
 
 set(${KIT}_SRCS
@@ -16,17 +22,11 @@ set(${KIT}_SRCS
 
 set(${KIT}_TARGET_LIBRARIES
   ${OpenIGTLink_LIBRARIES}
-  ${MRML_LIBRARIES}
-  SlicerBaseLogic
-#  vtkSlicerAnnotationsModuleMRML
-#  vtkSlicerMarkupsModuleMRML
+  ${VTK_LIBRARIES}
   )
 
-#-----------------------------------------------------------------------------
-SlicerMacroBuildModuleMRML(
-  NAME ${KIT}
-  EXPORT_DIRECTIVE ${${KIT}_EXPORT_DIRECTIVE}
-  INCLUDE_DIRECTORIES ${${KIT}_INCLUDE_DIRECTORIES}
-  SRCS ${${KIT}_SRCS}
-  TARGET_LIBRARIES ${${KIT}_TARGET_LIBRARIES}
-  )
+add_library(${KIT} ${${KIT}_SRCS})
+target_link_libraries(${KIT} ${KIT}_TARGET_LIBRARIES)
+target_include_directories(${KIT} ${KIT}_INCLUDE_DIRECTORIES);
+#TODO: Handle EXPORT_DIRECTIVE ${${KIT}_EXPORT_DIRECTIVE}
+
