--- a/MRML/CMakeLists.txt
+++ b/MRML/CMakeLists.txt
@@ -47,7 +47,7 @@ set(${KIT}_TARGET_LIBRARIES
   SlicerBaseLogic
   vtkSlicerAnnotationsModuleMRML
   vtkSlicerMarkupsModuleMRML
-  igtlSupportModuleCodec
+  igtlSupportModuleConverter
   )
 
 #-----------------------------------------------------------------------------
