Converter: Fixed compilation problem: export header wasn't generated. Also: removed leftover references to old name of the directory (codec).

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -31,5 +31,7 @@ set(${KIT}_TARGET_LIBRARIES
 add_library(${KIT} ${${KIT}_SRCS})
 target_link_libraries(${KIT} ${${KIT}_TARGET_LIBRARIES})
 target_include_directories(${KIT} ${${KIT}_INCLUDE_DIRECTORIES})
-#TODO: Handle EXPORT_DIRECTIVE ${${KIT}_EXPORT_DIRECTIVE}
+
+include( GenerateExportHeader )
+generate_export_header( ${KIT} EXPORT_FILE_NAME ${KIT}Export.h EXPORT_MACRO_NAME ${${KIT}_EXPORT_DIRECTIVE} )
 
