Create new class PolyDataConverter, moved vtk<->igtl code from vtkIGTLToMRMLPolyData

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -21,6 +21,7 @@ set(${KIT}_INCLUDE_DIRECTORIES
 
 set(${KIT}_SRCS
   igtlImageConverter.cxx
+  igtlPolyDataConverter.cxx
   )
 
 set(${KIT}_TARGET_LIBRARIES
