adding and activating a connection now fires up thread and main thread timer correctly

--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -17,6 +17,9 @@ find_package(VTK 6.1
   NO_MODULE)
 include(${VTK_USE_FILE})
 
+find_package(CTK REQUIRED)
+include(${CTK_USE_FILE})
+
 find_package(Qt5Widgets REQUIRED)
 
 set( MOC_HEADER_FILES
