Added COMMAND message support. Not tested, as we need a way to create the Commands first...

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -28,6 +28,8 @@ set(${KIT}_SRCS
   vtkIGTLIOImageDevice.h
   vtkIGTLIOStatusDevice.cxx
   vtkIGTLIOStatusDevice.h
+  vtkIGTLIOCommandDevice.cxx
+  vtkIGTLIOCommandDevice.h
   )
 
 set(${KIT}_TARGET_LIBRARIES
