--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -64,6 +64,8 @@ set(${KIT}_SRCS
   DeviceWidgets/qIGTLIOGenericDeviceWidget.cxx
   DeviceWidgets/qIGTLIOStatusDeviceWidget.h
   DeviceWidgets/qIGTLIOStatusDeviceWidget.cxx
+  DeviceWidgets/qIGTLIOCommandDeviceWidget.h
+  DeviceWidgets/qIGTLIOCommandDeviceWidget.cxx
   )
 
 set(${KIT}_MOC_SRCS
@@ -87,6 +89,7 @@ set(${KIT}_MOC_SRCS
   DeviceWidgets/qIGTLIODeviceWidget.h
   DeviceWidgets/qIGTLIOGenericDeviceWidget.h
   DeviceWidgets/qIGTLIOStatusDeviceWidget.h
+  DeviceWidgets/qIGTLIOCommandDeviceWidget.h
   )
   
 set(${KIT}_UI_SRCS
