Added igtlTransformConverter. Code compiles but has not been tested yet.

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -26,6 +26,7 @@ set(${KIT}_SRCS
   igtlImageConverter.cxx
   igtlPolyDataConverter.cxx
   igtlStatusConverter.cxx
+  igtlTransformConverter.cxx
   )
 
 set(${KIT}_TARGET_LIBRARIES
