Replaced device_name by std::pair<device_type, device_name> as the key in Connector Device handling, thus removing empty-device_name-hacks.

--- a/GUI/CMakeLists.txt
+++ b/GUI/CMakeLists.txt
@@ -23,6 +23,8 @@ set(EXECUTABLE ${PROJECT_NAME})
 find_package( Qt5 COMPONENTS Widgets Concurrent Xml OpenGL Sql REQUIRED )
 
 set(${KIT}_SRCS
+  qIGTLIOGuiUtilities.cxx
+  qIGTLIOGuiUtilities.h
   qIGTLIOLogicController.cxx
   qIGTLIOLogicController.h
   qIGTLIOClientWidget.cxx
