Added TransformDevice, but it is not registered yet. This compiles.

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -30,6 +30,8 @@ set(${KIT}_SRCS
   vtkIGTLIOStatusDevice.h
   vtkIGTLIOCommandDevice.cxx
   vtkIGTLIOCommandDevice.h
+  vtkIGTLIOTransformDevice.cxx
+  vtkIGTLIOTransformDevice.h
   )
 
 set(${KIT}_TARGET_LIBRARIES
