--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,14 @@ project(OpenIGTLinkIO)
 set(BUILD_SHARED_LIBS ON CACHE BOOL "build shared or static libs")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+
+# Choose version of Qt
+set( IGTLIO_QT_VERSION "5" CACHE STRING "Expected Qt version")
+mark_as_advanced( IGTLIO_QT_VERSION )
+set_property(CACHE IGTLIO_QT_VERSION PROPERTY STRINGS 4 5)
+if(NOT (IGTLIO_QT_VERSION VERSION_EQUAL "4" OR IGTLIO_QT_VERSION VERSION_EQUAL "5"))
+    message(FATAL_ERROR "Expected value for IGTLIO_QT_VERSION is either '4' or '5'")
+endif()
     
 add_subdirectory(Converter)
 add_subdirectory(Devices)
