Created first test verifying client-server connection. Removed explicit requirement for VTK 6.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,4 +49,8 @@ configure_file(OpenIGTLinkIOConfig.cmake.in
   OpenIGTLinkIOConfig.cmake
   )
 
+include(CTest)
 
+if (BUILD_TESTING)
+  add_subdirectory(Testing)
+endif()
