--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -7,7 +7,7 @@ set(${KIT}_EXPORT_DIRECTIVE "OPENIGTLINKIO_CONVERTER_EXPORT")
 find_package(OpenIGTLink REQUIRED)
 include(${OpenIGTLink_USE_FILE})
     
-find_package(VTK 6.1
+find_package(VTK
   COMPONENTS
   vtkIOImage
   vtkImagingMath
