--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -9,7 +9,7 @@ set(EXECUTABLE ${PROJECT_NAME})
 find_package(OpenIGTLink REQUIRED)
 include(${OpenIGTLink_USE_FILE})
 
-find_package(VTK 6.1
+find_package(VTK
   COMPONENTS
   vtkIOImage
   vtkImagingMath
